[project]
name = "cuda-kernel-generation"
description = "CUDA kernel generation environment for RL training"
tags = ["cuda", "code-generation", "gpu", "performance", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.3.post0",
    "torch>=2.0.0",
    "datasets",
    "pandas",
    "numpy",
    "datasets"
]

[project.optional-dependencies]
gpu = [
    "nvidia-ml-py3",
    "pynvml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["cuda_kernel_generation.py"]
